# djia

./: .gitignore  CLAUDE.md  DJIA_Capabilities_Demo.ipynb  DJIA_Complete_Guide.ipynb  DJIA_LangGraph_TrackTuner.ipynb  DJIA_LowLevel_FeatureExtraction.ipynb  DJIA_Setlist_Generator.ipynb  DJIA_Track_Pairing.ipynb  DOCUMENTATION_SYNC_REPORT.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_TRACK_TUNER_README.md  PARAMETER_REFERENCE.md  PHASE2_IMPLEMENTATION.md  PHASE3_COMPLETE.md  QUICK_START.md  README.md  analyze_tracks.py  coding-rules.md  create_lowlevel_notebook.py  debugging-rules.md  demo_capabilities.py  detect_structure.py  pyproject.toml  requirements.txt  segment_beats_helper.py  test_marrakech_tuning.py  test_phrase_locking.py  testing-rules.md
data/: djia_test.db  passaggio.m4a
docs/: PHASE4.md  api-reference.md  architecture.md  schemas.md  scripts-reference.md
examples/: backfill_crest_factor.py  phase4_example.py
results/:  Hermanez - Marrakech_structure.csv  01 - Gaiser - Pullpush_structure.csv  01 - ambivalent - nineteen_structure.csv  01 - larsson - need the sun - siberia_structure.csv  01 - markus fix - research - bside_structure.csv  01 - pan - pot - confronted - dh_structure.csv  01 - ramon tapia - say what_structure.csv  01. SIS - Nu Wim De Wa_structure.csv  02 - christian smith and john selway - swingworld paul ritch remix_structure.csv  02 - deltano - materia escura_structure.csv  02 - tg aka tim green - mr dry dachshund bottomless remix_structure.csv  04 - rainer weichhold - yeah - epicfail_structure.csv  04 Andomat 3000 Brique Mihai Popoviciu Remix_structure.csv  2000 And One - Spanish Fly_structure.csv  2000 And One - Tropical Melons_structure.csv  ANALYSIS_SUMMARY.md  Afternoon Coffee Boys - Dark Blend_structure.csv  Alex Guerrero - Caminando_structure.csv  Alex Under - El Diluvio Azul_structure.csv  Argy - Love Dose_structure.csv  B1 - Gabriel Ananda - Doppelwhipper - Cmc_structure.csv  DJ_SETLIST_OPTIMIZED.txt  dj_setlist_tracks.csv  mix_analysis_20260626_153258.csv  mix_analysis_20260626_153324.csv  track_list.txt  (+1 more)
(+64 files in other folders)
